<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnBack"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            app:icon="@drawable/baseline_arrow_back_24"
            android:text="@string/back"
            app:iconGravity="top"
            android:background="?attr/selectableItemBackground"
            android:textColor="@android:color/black"
            app:iconTint="@color/black"/>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnForward"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            app:icon="@drawable/baseline_arrow_forward_24"
            android:text="@string/forward"
            app:iconGravity="top"
            android:background="?attr/selectableItemBackground"
            android:textColor="@android:color/black"
            app:iconTint="@color/black"/>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnSave"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            app:icon="@drawable/baseline_save_24"
            android:text="@string/save"
            app:iconGravity="top"
            android:background="?attr/selectableItemBackground"
            android:textColor="@android:color/black"
            app:iconTint="@color/black"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnBookmark"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="?attr/selectableItemBackground"
            android:text="@string/bookmark"
            android:textColor="@android:color/black"
            app:icon="@drawable/baseline_bookmark_24"
            app:iconGravity="top"
            app:iconTint="@color/black" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnDesktop"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            app:icon="@drawable/baseline_desktop_windows_24"
            android:text="@string/desktop"
            app:iconGravity="top"
            android:background="?attr/selectableItemBackground"
            android:textColor="@android:color/black"
            app:iconTint="@color/black"/>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnFullscreen"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            app:icon="@drawable/baseline_fullscreen_24"
            android:text="@string/fullscreen"
            app:iconGravity="top"
            android:background="?attr/selectableItemBackground"
            android:textColor="@android:color/black"
            app:iconTint="@color/black"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnRefresh"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="?attr/selectableItemBackground"
            android:text="Refresh"
            android:textColor="@android:color/black"
            app:icon="@drawable/baseline_refresh_24"
            app:iconGravity="top"
            app:iconTint="@color/black" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnShare"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="?attr/selectableItemBackground"
            android:text="Share"
            android:textColor="@android:color/black"
            app:icon="@drawable/baseline_share_24"
            app:iconGravity="top"
            app:iconTint="@color/black" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnDownload"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="?attr/selectableItemBackground"
            android:text="Download"
            android:textColor="@android:color/black"
            app:icon="@drawable/baseline_file_download_24"
            app:iconGravity="top"
            app:iconTint="@color/black" />
    </LinearLayout>

</LinearLayout>